# moments

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
albumy/: __init__.py  emails.py  extensions.py  fakes.py  models.py  notifications.py  settings.py  utils.py
albumy/blueprints/: admin.py  ajax.py  auth.py  main.py  user.py
albumy/forms/: admin.py  auth.py  user.py
moments/: __init__.py  decorators.py  emails.py  fakes.py  lorem.py  models.py  notifications.py  settings.py  utils.py
moments/blueprints/: admin.py  ajax.py  auth.py  main.py  user.py
moments/core/: commands.py  errors.py  extensions.py  logging.py  request.py  templating.py
moments/forms/: admin.py  auth.py  main.py  user.py
moments/static/css/: style.css
moments/static/js/: main.js  script.js
moments/templates/: base.html  macros.html
moments/templates/admin/: edit_profile.html  index.html  manage_comment.html  manage_photo.html  manage_tag.html  manage_user.html
moments/templates/auth/: login.html  register.html  reset_password.html
moments/templates/emails/: change_email.html  change_email.txt  confirmation.html  confirmation.txt  reset_password.html  reset_password.txt
moments/templates/errors/: 400.html  403.html  404.html  413.html  500.html
moments/templates/main/: _comment.html  _photo_sidebar.html  _sidebar.html  about.html  collectors.html  explore.html  index.html  notifications.html  photo.html  profile_popup.html  search.html  tag.html  upload.html
moments/templates/user/: _header.html  collections.html  followers.html  following.html  index.html
moments/templates/user/settings/: base.html  change_avatar.html  change_email.html  change_password.html  delete_account.html  edit_notification.html  edit_privacy.html  edit_profile.html
tests/: __init__.py  app.py  base.py  test_admin.py  test_ajax.py  test_auth.py  test_basic.py  test_cli.py  test_main.py  test_ui.py  test_user.py
